k8s/category-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service-deployment
spec:
  replicas: 1                      
  selector:
    matchLabels:
      app: category-service               
  template:
    metadata:
      labels:
        app: category-service               
    spec:
      containers:
        - image: antohachaban/category-service:latest       
          imagePullPolicy: IfNotPresent  
          name: category-service           
          ports:
            - containerPort: 5000
