k8s/category-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: category-service-service
spec:
  type: LoadBalancer # ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5000
  selector:
    app: category-service
